Add address to Restaurant

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -6,6 +6,5 @@
 <p><%= @car.availability %></p>
 <p><%= @car.price %></p>
 
-<%= link_to 'Book this car', # %> |
-
-<%= link_to 'Back', root_path %> |
+<p><%= link_to 'Book this car', " " %></p>
+<p><%= link_to 'Back', root_path %></p>
