--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -3,7 +3,7 @@
 
 <ul>
   <% @cars.each do |car| %>
-    <li><%= car.name %></li>
+    <%= link_to car.model, car_path(car) %>
   <% end %>
 </ul>
 
