--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -2,9 +2,8 @@
 
 <h2><%= @car.model %></h2>
 <p><%= @car.user %></p>
-<p><%= @car.capacity %></p>
-<p><%= @car.availability %></p>
+<p><%= @car.capacity %></p>>
 <p><%= @car.price %></p>
 
 <p><%= link_to 'Book this car', " " %></p>
-<p><%= link_to 'Back', root_path %></p>
+<p><%= link_to 'Back to the main page', root_path %></p>
