--- a/app/views/bookings/index_renter.html.erb
+++ b/app/views/bookings/index_renter.html.erb
@@ -1,1 +1,114 @@
 <h1>Your inquiries</h1>
+
+<div class="bg-white">
+      <div class="container p-3">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>Pending requests</h3>
+            <p>You can ask questions to car owners renters via the platform</p>
+          </div>
+        </div>
+      </div>
+</div>
+
+<div class="bg-blue">
+  <div class="container p-3">
+    <div class="row">
+      <div class="col-md-8">
+        <p>Hi Chloe! I’m interesting in booking your car during my trip in Birmingham.</p>
+      <div>
+        <a href="#" class="btn btn-primary w-150">Approve</a>
+        <a href="#" class="btn btn-primary w-150">Decline</a>
+      </div>
+
+      <p>Hi Chloe! I’m interesting in booking your car during my trip in Birmingham.</p>
+      <div>
+        <a href="#" class="btn btn-primary w-150">Approve</a>
+        <a href="#" class="btn btn-primary w-150">Decline</a>
+      </div>
+
+
+
+      </div>
+
+
+    <div class="col-md-4">
+    <div class="bg-white border p-3 sticky-top">
+        <img src="https://res.cloudinary.com/djcwoukgv/image/upload/v1597792134/samples/ecommerce/car-interior-design.jpg" alt="" class="w-100 rounded">
+
+
+            <div class="d-flex justify-content-between mt-3">
+              <p><strong>Model</strong></p>
+              <p>BMW</p>
+            </div>
+
+            <div class="d-flex justify-content-between mt-3">
+              <p><strong>Duration</strong> </p>
+              <p>Sept 9 - Sept 12</p>
+            </div>
+
+            <div class="d-flex justify-content-between mt-3 border-bottom">
+              <p><strong>Price</strong>ss taxes</p>
+              <p>350$</p>
+            </div>
+
+            <div class="d-flex justify-content-between mt-3">
+              <p><strong>Total</strong></p>
+              <p><strong>$380.80</strong></p>
+
+            </div>
+
+    </div>
+  </div>
+</div>
+</div>
+ </div>
+
+
+<div class="container py-3">
+      <div class="row">
+        <div class="col-md-8">
+
+          <!-- turn this into an alert (warning) -->
+          <div class="alert alert-warning" role="alert">
+            Always make sure your insurance covers <strong>your trip</strong>.
+          </div>
+
+          <h2>Previous bookings</h2>
+
+          <!-- make a card -->
+          <div class="card p-3 mb-3">
+            <div class="card-product">
+              <img src="https://res.cloudinary.com/djcwoukgv/image/upload/v1597792134/samples/ecommerce/car-interior-design.jpg" />
+              <h5 class="card-product-details">Mercedes Benz</h5>
+              <p class="card-text">Verona, Italy</p>
+              <span>435$</span>
+            </div>
+          </div>
+
+          <!-- make a card -->
+          <div class="card p-3 mb-3">
+            <div class="card-body">
+
+              <h5 class="card-title">Mercedes Benz</h5>
+              <p class="card-text">Verona, Italy</p>
+              <span>435$</span>
+            </div>
+          </div>
+
+
+          <!-- /menu -->
+        </div>
+
+        <div class="col-md-4">
+          <!-- checkout -->
+          <!-- make this a full length button -->
+
+
+        </div>
+    </div>
+  </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
