Add dotenv - Protect my secret data in .env file

--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-2">
       <h1>Please enter new car's details</h1>
+
+    <div class="col-md-2">
 
       <%= form_for(@car) do |f| %>
         <%= f.label :model %>
@@ -10,6 +11,8 @@
         <%= f.number_field :capacity %>
         <%= f.label :price %>
         <%= f.number_field :price %>
+        <%= f.label :photo %>
+        <%= f.file_field :photo %>
         <div class="submission-button"><%= f.submit %></div>
       <% end %>
 
