--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,12 +1,17 @@
-<h1>Cars available in car.location </h1>
-<p></p>
+<h1>Cars available in location </h1>
 
-<div class="cards">
+<div class="container">
+  <div class="row">
     <% @cars.each do |car|  %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://res.cloudinary.com/djcwoukgv/image/upload/v1597792127/samples/food/dessert.jpg')">
-          <%= link_to car.model, car_path(car) %>
+      <div class="card col-12 col-md-6 col-lg-3">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to car.model, car_path(car) %></h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
+      </div>
     <% end %>
+  </div>
 </div>
-
 <%= link_to 'Add a new car', new_car_path %>
