--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -8,6 +8,10 @@
   <p>User name : <%= @car.user %></p>
   <p>Capacity : <%= @car.capacity %></p>
   <p>Price : <%= @car.price %>$</p>
+    <% if @car.photo.attached? %>
+    <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
+
 
   <p><%= link_to 'Book this car', " " %></p>
 
