--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -13,6 +13,6 @@
     <% end %>
 
 
-  <p><%= link_to 'Book this car', " " %></p>
+  <p><%= link_to 'Book this car', new_car_booking_path(:car_id) %></p>
 
 </div>
