--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -13,7 +13,7 @@
         <%= f.number_field :price %>
         <%= f.label :photo %>
         <%= f.file_field :photo %>
-        <div class="submission-button"><%= f.submit %></div>
+        <%= f.submit %></div>
       <% end %>
 
       <p><%= link_to 'Back to the main page', root_path %></p>
