--- a/app/views/pages/navbar.html.erb
+++ b/app/views/pages/navbar.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="bg-img">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="home-button" href="#">
   <%= image_tag("logo.png", class: "rounded-circle") %>
   <img src="" class="rounded-circle" width="30" height="30" alt="" loading="lazy">
@@ -38,4 +38,4 @@
 
 
 
-</div>
+</nav>
