--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,10 +1,17 @@
-<h1>Car's list </h1>
-<p>Here's the list of the available cars :</p>
+<div class="container">
+  <h1>Cars available in location </h1>
+  <div class="row">
+        <% @cars.each do |car|  %>
+          <div class="card col-12 col-md-6 col-lg-3">
+            <%# <img class="card-img-top" src="" alt="Card image cap"> %>
+            <%= cl_image_tag car.photo.key, height: 300, width: 400, crop: :fill %>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to car.model, car_path(car) %></h5>
+            </div>
+          </div>
+        <% end %>
+  </div>
+  <p><%= link_to 'Add a new car', new_car_path %></p>
+  <%= link_to 'Sign-in', new_user_session_path %>
 
-<ul>
-  <% @cars.each do |car| %>
-    <%= link_to car.model, car_path(car) %>
-  <% end %>
-</ul>
-
-<%= link_to 'Add a new car', new_car_path %>
+</div>
