--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,17 +1,21 @@
 <div class="container">
-  <h1>Cars available in location </h1>
-  <div class="row">
-        <% @cars.each do |car|  %>
-          <div class="card col-12 col-md-6 col-lg-3">
-            <%# <img class="card-img-top" src="" alt="Card image cap"> %>
-            <%= cl_image_tag car.photo.key, height: 300, width: 400, crop: :fill %>
+  <h2>Available cars</h2>
+  <a href="http://localhost:3000/cars/new" class="btn btn-outline-warning">Add a new car ?</a>
+  <p> </p>
+    <div class="row justify-content-center">
+      <% @cars.each do |car|  %>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card" style="width: 18rem;">
+            <%= cl_image_tag car.photo.key, height: 180, width: 286, crop: :fill %>
             <div class="card-body">
               <h5 class="card-title"><%= link_to car.model, car_path(car) %></h5>
+              <a href="http://localhost:3000/cars/car_id/bookings/new" class="btn btn-primary">Book now</a>
             </div>
           </div>
-        <% end %>
-  </div>
-  <p><%= link_to 'Add a new car', new_car_path %></p>
-  <%= link_to 'Sign-in', new_user_session_path %>
-
+        </div>
+      <% end %>
+    </div>
+  <p> </p> 
+  <a href="http://localhost:3000/users/sign_in" class="btn btn-info">Sign-in</a>
+  <p> </p> 
 </div>
