--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,41 +1,17 @@
 
-  <div class="bg-img">
-  <a class="home-button" href="#">
-  <%= image_tag("logo.png", class: "rounded-circle") %>
-  <img src="" class="rounded-circle" width="30" height="30" alt="" loading="lazy">
-  CARCNC</a>
-
+<div class="bg-img">
+<h1>Welcome on CARCNC</h1>
+<h2>What are you looking for ?</h2>
   <form novalidate="novalidate" class="form-inline my-2 my-lg-0"action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <div class="search-form-control form-group">
-  <input class="form-control" type="search" placeholder="Location" aria-label="Search">
-  <input type="dates" aria-label="Dates" placeholder="Dates" class="form-control">
+    <div class="search-form-control form-group">
+      <input class="form-control" type="search" placeholder="Location" aria-label="Search">
+      <input type="dates" aria-label="Dates" placeholder="Dates" class="form-control">
 
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search"></i> 
-    </button>
-  </div>
-</form>
-
-<div class="avatar_container" class="form-inline">
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">My profile</button>
-    <button class="dropdown-item" type="button">Messages</button>
-    <button class="dropdown-item" type="button">Notifications</button>
-    <button class="dropdown-item" type="button">Saved cars</button>
-    <button class="dropdown-item" type="button">Add a new offer</button>
-    <button class="dropdown-item" type="button">Share my experience</button>
-    <button class="dropdown-item" type="button">Help</button>
-    <button class="dropdown-item" type="button">Log out</button>
-  </div>
-</div>
-
-<img class="avatar" alt="avatar" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
-</div>
-
-
-
+        <button name="button" type="submit" class="btn btn-flat">
+          <i class="fas fa-search"></i> 
+        </button>
+    </div>
+  </form>
+  <h3><%= link_to 'Have a look to the index', cars_path %></h3>
+  <h3><%= link_to 'Do you want to publish an offer ?', new_car_path %></h3>
 </div>
