--- a/app/views/bookings/index_owner.html.erb
+++ b/app/views/bookings/index_owner.html.erb
@@ -1,4 +1,30 @@
-<div class="bg-white">
+<div class="container">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <a class="navbar-brand" href="/">
+    <%= image_tag("logo.png", class: "rounded-circle") %> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Search
+        </a>
+      </li>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+
+          <a class="dropdown-item" href="#">Another action</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+</div>
+<div class="bg-blue">
       <div class="container p-3">
         <div class="row">
           <div class="col-md-8">
@@ -34,7 +60,6 @@
     <div class="bg-white border p-3 sticky-top">
         <img src="https://res.cloudinary.com/djcwoukgv/image/upload/v1597792134/samples/ecommerce/car-interior-design.jpg" alt="" class="w-100 rounded">
 
-
             <div class="d-flex justify-content-between mt-3">
               <p><strong>Model</strong></p>
               <p>BMW</p>
@@ -66,26 +91,12 @@
 <div class="container py-3">
       <div class="row">
         <div class="col-md-8">
-
-          <!-- turn this into an alert (warning) -->
-          <div class="alert alert-warning" role="alert">
-            Always make sure your insurance covers <strong>your trip</strong>.
-          </div>
-
-          <h2>Previous bookings</h2>
-
-          <!-- make a card -->
-
-
-          <div class="card p-3 mb-3">
+          <h2>Car in renting</h2>
+          <!-- card -->
             <div class="card-product">
               <img src="https://res.cloudinary.com/djcwoukgv/image/upload/v1597792134/samples/ecommerce/car-interior-design.jpg" />
-              <h5 class="card-product-details">Mercedes Benz, Verona Italy</h5>
+              <h5 class="card-product-details">Mercedes Benz in Verona Italy</h5>
             </div>
-          </div>
-
-
-          <!-- /menu -->
         </div>
 
 
