--- a/app/views/bookings/index_renter.html.erb
+++ b/app/views/bookings/index_renter.html.erb
@@ -1,5 +1,30 @@
+<div class="container">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <a class="navbar-brand" href="/">
+    <%= image_tag("logo.png", class: "rounded-circle") %> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<div class="bg-white">
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Search
+        </a>
+      </li>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+
+          <a class="dropdown-item" href="/users/edit">Another action</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+</div>
+<div class="bg-blue">
       <div class="container p-3">
         <div class="row">
           <div class="col-md-8">
@@ -10,41 +35,43 @@
       </div>
 </div>
 
-<div class="bg-blue">
-  <div class="container p-3">
-    <div class="row">
-      <div class="col-md-8">
-        <p>Hi Chloe! You are request for xxx is pending.</p>
-      <div>
-        <a href="#" class="btn btn-primary w-150">Delete</a>
-        <a href="#" class="btn btn-primary w-150">Message owener</a>
-      </div>
-      </div>
+<div class="container">
+<div class="notification">
+  <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
+  <div class="notification-content">
+    <p><small>Sep 1st</small></p>
+    <p class="text-success">Hi Choe! Your request has just been approved.</p>
+  </div>
+  <div class="notification-actions">
+    <a href="#">Edit <i class="fas fa-pencil-alt"></i></a>
+    <a href="#">Delete <i class="far fa-trash-alt"></i></a>
+  </div>
 </div>
 </div>
- </div>
 
+<div class="container">
+<div class="notification">
+  <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
+  <div class="notification-content">
+    <p><small>Sep 1st</small></p>
+    <p>Hi Choe! Your request is being reviewed by the owner.</p>
+  </div>
+  <div class="notification-actions">
+    <a href="#">Message Owner <i class="fas fa-pencil-alt"></i></a>
+    <a href="#">Delete <i class="far fa-trash-alt"></i></a>
+  </div>
+</div>
+</div>
 
 <div class="container py-3">
-      <div class="row">
         <div class="col-md-8">
-          <h2>Previous bookings</h2>
-
-          <!-- make a card -->
-          <div class="card p-3 mb-3">
-            <div class="card-product">
+              <h2>Previous bookings</h2>
+              <!-- card -->
+              <div class="card-product">
               <img src="https://res.cloudinary.com/djcwoukgv/image/upload/v1597792134/samples/ecommerce/car-interior-design.jpg" />
-              <h5 class="card-product-details">Mercedes Benz</h5>
-
+              <h5 class="card-product-details">Mercedes Benz, Verona Italy</h5>
             </div>
-          </div>
-
-
-          <!-- /menu -->
         </div>
-
-
-    </div>
   </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
