--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,16 +1,32 @@
 <div class="container">
-  <div class="img">
-    <% if @car.photo.attached? %>
-      <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
-    <% end %>
-  </div>
-  <div class="description">
-    <h2><%= @car.model %></h2>
-    <p>User name : <%= @car.user %></p>
-    <p>Capacity : <%= @car.capacity %> persons</p>
-    <p>Price : <%= @car.price %>$ /per day</p>
-  </div>
-  <a href="http://localhost:3000/cars/car_id/bookings/new" class="btn btn-danger">Reserve</a>
-  <p><%= link_to 'Back to the selection', cars_path %></p>
+  <div class="col-md-6">
+    <div class="bg-white border p-3 sticky-top">
 
+      <div class="img">
+        <% if @car.photo.attached? %>
+          <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
+      </div>
+      <div class="description">
+      <p> </p>
+        <h2><strong><%= @car.model %></strong></h2>
+
+      <div class="d-flex justify-content-between mt-3">
+        <p><strong>User name : </strong></p>
+        <p><%= @car.user %></p>
+      </div>
+
+      <div class="d-flex justify-content-between mt-3">
+        <p><strong>Capacity :</strong></p>
+        <p><%= @car.capacity %> persons</p>
+      </div>
+
+      <div class="d-flex justify-content-between mt-3 border-bottom">
+        <p><strong>Price : </strong></p>
+        <p><%= @car.price %>$ /per day</p>
+      </div>
+    </div>
+    <a href="http://localhost:3000/cars/car_id/bookings/new" class="btn btn-danger">Reserve</a>
+  </div>
+<p><%= link_to 'Back to the selection', cars_path %></p>
 </div>
