--- a/app/views/bookings/index_owner.html.erb
+++ b/app/views/bookings/index_owner.html.erb
@@ -39,6 +39,10 @@
   <div class="container p-3">
     <div class="row">
       <div class="col-md-8">
+
+        <% index_owner.bookings.each do |booking| %>
+        # some code
+        <% end  %>
         <p>Hi Chloe! I’m interesting in booking your car during my trip in Birmingham.</p>
       <div>
         <a href="#" class="btn btn-primary w-150">Approve</a>
