--- a/app/views/bookings/index_owner.html.erb
+++ b/app/views/bookings/index_owner.html.erb
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-md-8">
 
-        <% index_owner.bookings.each do |booking| %>
+        <% @index_owner.booking.each do |booking| %>
         # some code
         <% end  %>
         <p>Hi Chloe! I’m interesting in booking your car during my trip in Birmingham.</p>
