--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,11 @@
     <button class="dropdown-item" type="button">My profile</button>
     <button class="dropdown-item" type="button">Messages</button>
     <button class="dropdown-item" type="button">Notifications</button>
-    <button class="dropdown-item" type="button">Saved cars</button>
-    <button class="dropdown-item" type="button">Add a new offer</button>
+    <a class="dropdown-item" href="/bookings/renter">Saved cars</button>
+    <a class="dropdown-item" href="/cars/new">Add a new offer</a>
     <button class="dropdown-item" type="button">Share my experience</button>
     <button class="dropdown-item" type="button">Help</button>
-    <button class="dropdown-item" type="button">Log out</button>
+    <a class="dropdown-item" href="/users/sign_out">Log out</button>
   </div>
 </div>
 
