--- a/app/views/pages/navbar.html.erb
+++ b/app/views/pages/navbar.html.erb
@@ -26,7 +26,7 @@
     <button class="dropdown-item" type="button">Messages</button>
     <button class="dropdown-item" type="button">Notifications</button>
     <button class="dropdown-item" type="button">Saved cars</button>
-    <button class="dropdown-item" type="button">Add a new offer</button>
+    <button href="cars/new" class="dropdown-item" type="button">Add a new offer</button>
     <button class="dropdown-item" type="button">Share my experience</button>
     <button class="dropdown-item" type="button">Help</button>
     <button class="dropdown-item" type="button">Log out</button>
