--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -26,7 +26,7 @@
         <p><%= @car.price %>$ /per day</p>
       </div>
     </div>
-    <a href="http://localhost:3000/cars/car_id/bookings/new" class="btn btn-danger">Reserve</a>
+    <div><%= link_to "Confirm booking", bookings_renter_path %></div>
   </div>
 <p><%= link_to 'Back to the selection', cars_path %></p>
 </div>
