--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -3,7 +3,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3>Your inquiries</h3>
-            <p>You can ask questions to car owners renters via the platform</p>
+            <p>You can chat with CARCNCers via the platform</p>
           </div>
         </div>
       </div>
@@ -11,34 +11,15 @@
 
 
 <div class="container">
-  <h2><%= current_user %>, all your booking's requests:</h2>
 
-    <% @bookings.cars.each do |booking| %>
-      <% if booking.status == nil %>
-      <div class="card-trip card-booking">
-        <h2><%= car.model.capitalize %></h2>
-        <p><%= booking.user%> </p>
-        <br>
-        <div class="card-booking-content">
-        <%= booking.car_id %>
-        <br>
-          <%= link_to "Accept", booking_accept_path(booking), class: "btn btn-primary", method: :patch %>
-          <%= link_to "Reject", booking_reject_path(booking), class: "btn btn-secondary", method: :patch %>
-      <% else %>
-      <div class="card-trip card-booking accepted">
-        <h2><%= booking.car.model.capitalize %></h2>
-        <p><%= booking.user %> </p>
-        <br>
-        <div class="card-booking-content">
-        <%= booking.car_id %>
-        <br>
-          <p class="accepted">Accepted</p>
+    <% @bookings.each do |booking| %>
+
+
+          <%= link_to "Accept", accept_path(@booking), class: "btn btn-primary", method: :patch %>
+          <%= link_to "Reject", reject_path(@booking), class: "btn btn-secondary", method: :patch %>
       <% end %>
-      </div>
-      </div>
-    <% end %>
 </div>
-</div>
+
 
 
 <div class="container">
