--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,54 +1,4 @@
 
-  <div class="bg-img">
-  <a class="home-button" href="#">
-  <%= image_tag("logo.png", class: "rounded-circle") %>
- 
-  CARCNC</a>
-
-
-  <div class="buttons">
-  <form novalidate="novalidate" class="form-inline" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <div class="search-form-control form-group">
-  <input id="location" type="search" placeholder="Location" aria-label="Search">
-  <input type="dates" aria-label="Dates" placeholder="First date" id="first_date">
-
-  <input type="dates" aria-label="Dates" placeholder="Last date" id="second_date">
-
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search">
-      </i> 
-    </button>
-  </div>
-</form>
-</div>
-
-
-<div class="avatar_container" class="form-inline">
-<div class="box"
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">My profile</button>
-    <button class="dropdown-item" type="button">Messages</button>
-    <button class="dropdown-item" type="button">Notifications</button>
-    <button class="dropdown-item" type="button">Saved cars</button>
-    <button class="dropdown-item" type="button">Add a new offer</button>
-    <button class="dropdown-item" type="button">Share my experience</button>
-    <button class="dropdown-item" type="button">Help</button>
-    <button class="dropdown-item" type="button">Log out</button>
-  </div>
-</div>
-
-
-</div>
-
-<%= image_tag("avatar.png", class: "avatar") %>
-</div>
-
-
-
 
 <div class="container col-sm-4 col-md-7 col-lg-10 mt-5">
 <div class="calendar-card">
@@ -175,7 +125,7 @@ for (let i = 0; i < 6; i++) {
             let cellText = document.createTextNode(date);
             if (date === today.getDate() && year === today.getFullYear() && month === today.getMonth()) {
                 cell.classList.add("bg-info");
-            } // color today's date
+            } // color todays date
             cell.appendChild(cellText);
             row.appendChild(cell);
             date++;
@@ -196,12 +146,3 @@ for (let i = 0; i < 6; i++) {
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-</div>
-
-
-
-
-
-
-
-
