--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    
+
     <div class="form">
       <h2>Please enter new car's details</h2>
       <%= form_for(@car) do |f| %>
@@ -16,10 +16,10 @@
         <%= f.file_field :photo %>
         <%= f.label :photo %>
 
-        <p><%= f.submit %></div></p>
+        <p><%= f.submit %></p>
       <% end %>
     </div>
-    <p><%= link_to 'Back to the selection', cars_path %></p>
-    <p><%= link_to 'Back to the main page', root_path %></p>
   </div>
+  <p><%= link_to 'Back to the selection', cars_path %></p>
+  <p><%= link_to 'Back to the main page', root_path %></p>
 </div>
