--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,32 +1,33 @@
 <div class="container">
   <div class="col-md-6">
     <div class="bg-white border p-3 sticky-top">
-
       <div class="img">
         <% if @car.photo.attached? %>
           <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
         <% end %>
       </div>
       <div class="description">
-      <p> </p>
-        <h2><strong><%= @car.model %></strong></h2>
-
-      <div class="d-flex justify-content-between mt-3">
-        <p><strong>User name : </strong></p>
-        <p><%= @car.user %></p>
-      </div>
-
-      <div class="d-flex justify-content-between mt-3">
-        <p><strong>Capacity :</strong></p>
-        <p><%= @car.capacity %> persons</p>
-      </div>
-
-      <div class="d-flex justify-content-between mt-3 border-bottom">
-        <p><strong>Price : </strong></p>
-        <p><%= @car.price %>$ /per day</p>
+          <p> </p>
+            <h2><strong><%= @car.model %></strong></h2>
+            <div class="d-flex justify-content-between mt-3">
+              <p><strong>User name : </strong></p>
+              <p><%= @car.user %></p>
+            </div>
+            <div class="d-flex justify-content-between mt-3">
+              <p><strong>Capacity :</strong></p>
+              <p><%= @car.capacity %> persons</p>
+            </div>
+            <div class="d-flex justify-content-between mt-3 border-bottom">
+              <p><strong>Price : </strong></p>
+              <p><%= @car.price %>$ /per day</p>
+            </div>
+        </div>
+      <div><%= simple_form_for [@car, @booking] do |f| %>
+        <%= f.submit %>
+        <%= render "bookings/new" %>
+        <% end %>
       </div>
     </div>
-    <div><%= link_to "Confirm booking", bookings_renter_path %></div>
-  </div>
 <p><%= link_to 'Back to the selection', cars_path %></p>
+</div>
 </div>
