--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,54 +1,57 @@
 <div class="bg-img">
   <a class="home-button" href="#">
   <%= image_tag("logo.png", class: "rounded-circle") %>
- 
+
   CARCNC</a>
 
+</div>
+<div class="buttons">
+    <form novalidate="novalidate" class="form-inline" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+    <div class="search-form-control form-group">
+    <input id="location" type="search" placeholder="Location" aria-label="Search">
+    <input type="dates" aria-label="Dates" placeholder="First date" id="first_date">
 
-  <div class="buttons">
-  <form novalidate="novalidate" class="form-inline" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <div class="search-form-control form-group">
-  <input id="location" type="search" placeholder="Location" aria-label="Search">
-  <input type="dates" aria-label="Dates" placeholder="First date" id="first_date">
+    <input type="dates" aria-label="Dates" placeholder="Last date" id="second_date">
 
-  <input type="dates" aria-label="Dates" placeholder="Last date" id="second_date">
-
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search">
-      </i> 
-    </button>
-  </div>
-</form>
+      <button name="button" type="submit" class="btn btn-flat">
+        <i class="fas fa-search">
+        </i>
+      </button>
+    </div>
+  </form>
 </div>
 
 
 <div class="avatar_container" class="form-inline">
-<div class="box"
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">My profile</button>
-    <button class="dropdown-item" type="button">Messages</button>
-    <button class="dropdown-item" type="button">Notifications</button>
-    <button class="dropdown-item" type="button">Saved cars</button>
-    <button class="dropdown-item" type="button">Add a new offer</button>
-    <button class="dropdown-item" type="button">Share my experience</button>
-    <button class="dropdown-item" type="button">Help</button>
-    <button class="dropdown-item" type="button">Log out</button>
-=======
-  <form novalidate="novalidate" class="form-inline my-2 my-lg-0"action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-    <div class="search-form-control form-group">
-    <input class="form-control" type="search" placeholder="Location" aria-label="Search">
-    <input type="dates" aria-label="Dates" placeholder="Dates" class="form-control">
-
-      <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-search"></i>
+  <div class="box">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="navbar-toggler-icon"></span>
       </button>
-    </div>
-  </form>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <button class="dropdown-item" type="button">My profile</button>
+            <button class="dropdown-item" type="button">Messages</button>
+            <button class="dropdown-item" type="button">Notifications</button>
+            <button class="dropdown-item" type="button">Saved cars</button>
+            <button class="dropdown-item" type="button">Add a new offer</button>
+            <button class="dropdown-item" type="button">Share my experience</button>
+            <button class="dropdown-item" type="button">Help</button>
+            <button class="dropdown-item" type="button">Log out</button>
 
+            <form novalidate="novalidate" class="form-inline my-2 my-lg-0"action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+              <div class="search-form-control form-group">
+              <input class="form-control" type="search" placeholder="Location" aria-label="Search">
+              <input type="dates" aria-label="Dates" placeholder="Dates" class="form-control">
+
+                <button name="button" type="submit" class="btn btn-flat">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+    </div>
+  </div>
+</div>
 <div class="avatar_container" class="form-inline">
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
