Changes the dropdown button style

--- a/app/views/pages/navbar.html.erb
+++ b/app/views/pages/navbar.html.erb
@@ -29,7 +29,7 @@
 
 <select name="cars" class="dropdown-field">
   
-  <option value="volvo" >Navigation</option>
+  <option value="volvo" ></option>
   <option value="saab">My profile</option>
   <option value="opel">Messages</option>
   <option value="audi">Notifications</option>
@@ -39,7 +39,7 @@
   <option value="audi">Help</option>
   <option value="audi">Log out</option>
   </select>
-
+  <div class="pullmenu-icon"></div>
 <%= image_tag("avatar.png", class: "avatar") %>
 
 
