--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -226,23 +226,13 @@ position: fixed;
 
 .dropdown-field {
 
-        background-image:
-          linear-gradient(45deg, transparent 50%, white),
-          linear-gradient(135deg, white, transparent 50%),
-          linear-gradient(to right, #34becd, #34becd);
-        background-position:
-          calc(100% - 20px) calc(1em + 2px),
-          calc(100% - 15px) calc(1em + 2px),
-          100% 0;
-        background-size:
-          5px 5px,
-          5px 5px,
-          2.5em 2.5em;
-        background-repeat: no-repeat;
-        top:30px;
-        height:40px;
-        left: 1150px;
-        position:fixed
+        background-color: #white;
+        top:20px;
+        height:60px;
+        width: 110px;
+        left: 1320px;
+        position:fixed;
+       
 }
 
 
@@ -251,7 +241,7 @@ position: fixed;
         /* styling */
         background-color: white ;
         border: thin solid grey;
-        border-radius: 10px;
+        border-radius: 30px;
         display: inline-block;
         font: inherit;
         line-height: 1.5em;
@@ -264,7 +254,6 @@ position: fixed;
 
       .nav-buttons {
         position: sticky;
-        width: 600px;
         height: 65px;
         left: 400px;
         top: 20px;
@@ -278,4 +267,35 @@ position: fixed;
     .nav-search-form-control {
         border: 1px solid grey;
         border-radius: 50px;
+    }
+
+    .pullmenu-icon {
+        width: 25px;
+        height: 3px;
+        background:  grey;
+        position: fixed;
+        left: 1340px;
+        top: 40px;
+        transition: opacity .0s ease-in-out;
+    
+    
+    &:after {
+        content: '';
+        width: 25px;
+        height: 3px;
+        background: grey;
+        position: absolute;
+        top: 14px;
+        left: 0px;
+      }
+      
+      &:before {
+        content: '';
+        width: 25px;
+        height: 3px;
+        background: grey;
+        position: absolute;
+        top: 7px; 
+        left: 0;
+      }
     }
