--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -22,10 +22,9 @@
               <p><%= @car.price %>$ /per day</p>
             </div>
         </div>
-      <div><%= simple_form_for [@car, @booking] do |f| %>
-        <%= f.submit %>
+      </div>
         <%= render "bookings/new" %>
-        <% end %>
+
       </div>
     </div>
 <p><%= link_to 'Back to the selection', cars_path %></p>
