--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,32 +1,66 @@
-<div class="container">
-  <div class="col-md-6">
-    <div class="bg-white border p-3 sticky-top">
-      <div class="img">
-        <% if @car.photo.attached? %>
-          <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
-        <% end %>
-      </div>
-      <div class="description">
-          <p> </p>
-            <h2><strong><%= @car.model %></strong></h2>
-            <div class="d-flex justify-content-between mt-3">
-              <p><strong>User name : </strong></p>
-              <p><%= @car.user %></p>
+<div class="bg-white">
+        <div class="container p-3">
+          <div class="row">
+            <div class="col-md-8">
+              <h3>Fun to drive, comfortable ride and fuel efficient, great for short and long trips.</h3>
+              <ul>
+                <p>🎁 Book now 10% OFF code (end of trip)</p>
+                <p>🚆FREE Metro station Drop off at end of trip</p>
+
+            </ul>
             </div>
-            <div class="d-flex justify-content-between mt-3">
-              <p><strong>Capacity :</strong></p>
-              <p><%= @car.capacity %> persons</p>
+            <div class="col-md-4">
+              <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
             </div>
-            <div class="d-flex justify-content-between mt-3 border-bottom">
-              <p><strong>Price : </strong></p>
-              <p><%= @car.price %>$ /per day</p>
+          </div>
+        </div>
+</div>
+    <div class="container py-3">
+      <div class="row">
+        <div class="col-md-8">
+          <h2>Services included</h2>
+
+          <!-- make a card -->
+          <div class="card p-3 mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Extras</h5>
+              <p class="card-text">🧼 Disinfected between each trip</p>
+              <p class="card-text">🚚 FREE Roadside Assistance with Rental </p>
+              <p class="card-text">💰 Rent 1 week receive 20$ FREE gas </p>
+            </div>
+          </div>
+
+
+
+ <!-- checkout box -->
+        <div class="">
+            <div class="bg-white border p-3 sticky-top">
+                <a href="#" class="btn btn-primary w-100">Book now</a>
+                <div class="d-flex justify-content-between mt-3">
+                  <p>Model</p>
+                  <p><%= @car.model %></p>
+                </div>
+
+                <div class="d-flex justify-content-between mt-3">
+                  <p>Owner</p>
+                  <p><%= @car.user.first_name %></p>
+                </div>
+
+                <div class="d-flex justify-content-between mt-3">
+                  <p>Capacity</p>
+                  <p><%= @car.capacity %></p>
+                </div>
+                <%= render "bookings/new" %>
             </div>
         </div>
       </div>
-        <%= render "bookings/new" %>
-
-      </div>
     </div>
-<p><%= link_to 'Back to the selection', cars_path %></p>
 </div>
-</div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+
+
