--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,31 +1,6 @@
-<div class="container">
-<div class="col-md-4">
-    <div class="bg-white border p-3 sticky-top">
-        <img src="https://res.cloudinary.com/djcwoukgv/image/upload/v1597792134/samples/ecommerce/car-interior-design.jpg" alt="" class="w-100 rounded">
-
-
-            <div class="d-flex justify-content-between mt-3">
-              <p><strong>Model</strong></p>
-              <p>BMW</p>
-            </div>
-
-            <div class="d-flex justify-content-between mt-3">
-              <p><strong>Duration</strong> </p>
-              <p>Sept 9 - Sept 12</p>
-            </div>
-
-            <div class="d-flex justify-content-between mt-3 border-bottom">
-              <p><strong>Price</strong> s/taxes</p>
-              <p>350$</p>
-            </div>
-
-            <div class="d-flex justify-content-between mt-3">
-              <p><strong>Total</strong></p>
-              <p><strong>$380.80</strong></p>
-
-            </div>
-            <div><a href="bookings/renter" class="btn btn-primary w-100">Confirm booking</a></div>
-
-    </div>
-</div>
-</div>
+<%= simple_form_for [@car, @booking] do |f| %>
+  <%= f.input :start_date, as: :date, start_year: Date.today.year, order: [:day, :month, :year], html5: true, input_html: { min: Date.today.to_s, value: Date.today.to_s } %>
+  <%= f.input :end_date, as: :date, start_year: Date.today.year, order: [:day, :month, :year], html5: true, input_html: { min: Date.today.to_s, value: Date.today.to_s } %>
+  <%= f.hidden_field :car_id, value: @car.id %>
+  <%= f.submit %>
+<% end %>
