--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -13,11 +13,11 @@
             <h4 class="card-title"><strong><%= car.model %></strong></h4>
               <p><%= car.capacity %> persons</p>
               <p><%= car.price %>$ /per day</p>
-            <%= link_to "Book now", car_path(car) %>
+            <%= link_to "Book now", car_path(car), class: "btn btn-primary" %>
           </div>
         </div>
       </div>
     <% end %>
   </div>
-  <p> </p>
+  <p> </p> 
 </div>
