--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
+<div class="bg-img">
+</div>
   <div>
-    <h2>Available cars</h2>
+    <h3>Your results</h3>
     <p> </p>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-start">
     <% @cars.each do |car|  %>
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card" style="width: 18rem;">
