--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -3,18 +3,18 @@
     <%= image_tag "logo.png" %><strong>CarCNC</strong>
   <% end %>
 
-  <div class="btn-group">
-    <button type="button" class="btn btn-primary">Menu</button>
-    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="sr-only">Toggle Dropdown</span>
-    </button>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="<%= bookings_dashboard_path %>">Dashboard</a>
-      <a class="dropdown-item" href="#">Saved cars</a>
-      <a class="dropdown-item" href="<%= new_car_path %>">Add a new offer</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Log out</a>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to "Dashboard", bookings_dashboard_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Add a new car", new_car_path, class: "nav-link" %>
+      </li>
   </div>
-  
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  <%= link_to "Log out", "#", class: "btn btn-ghost" %>
 </div>
