--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,170 +1,16 @@
-<div class="bg-img">
-  <a class="home-button" href="#">
-</div>
-
-<div class="buttons">
-    <form novalidate="novalidate" class="form-inline" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-    <div class="search-form-control form-group">
-    <input id="location" type="search" placeholder="Location" aria-label="Search">
-    <input type="dates" aria-label="Dates" placeholder="First date" id="first_date">
-
-    <input type="dates" aria-label="Dates" placeholder="Last date" id="second_date">
-
-      <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-search">
-        </i>
-      </button>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.mopar.ca/assets/img/2020/hero-slides/accessories/gladiator-bg-xl.jpg);">
+  <div class="container">
+    <h1>Welcome on CarCNC</h1>
+    <p>Ready for a ride ?</p>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search your car" aria-label="Search">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+        </form>
     </div>
-  </form>
 </div>
-
-<div class="container col-sm-4 col-md-7 col-lg-10 mt-5">
-<div class="calendar-card">
-    <h3 class="card-header" id="monthAndYear">Sep 2020</h3>
-    <table class="table table-bordered table-responsive-sm" id="calendar">
-        <thead>
-        <tr>
-            <th>Sun</th>
-            <th>Mon</th>
-            <th>Tue</th>
-            <th>Wed</th>
-            <th>Thu</th>
-            <th>Fri</th>
-            <th>Sat</th>
-        </tr>
-        </thead>
-
-        <tbody id="calendar-body"><tr><td></td><td></td><td>1</td><td>2</td><td class="bg-info">3</td><td>4</td><td>5</td></tr><tr><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td></tr><tr><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td></tr><tr><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td></tr><tr><td>27</td><td>28</td><td>29</td><td>30</td></tr><tr></tr></tbody>
-    </table>
-
-    <div class="form-inline">
-
-        <button class="btn btn-outline-primary col-sm-6" id="previous" onclick="previous()">Previous</button>
-
-        <button class="btn btn-outline-primary col-sm-6" id="next" onclick="next()">Next</button>
-    </div>
-    <br>
-    <form class="form-inline">
-        <label class="lead " for="month">Jump To: </label>
-        <select class="form-control col-sm-4" name="month" id="month" onchange="jump()">
-            <option value="0">Jan</option>
-            <option value="1">Feb</option>
-            <option value="2">Mar</option>
-            <option value="3">Apr</option>
-            <option value="4">May</option>
-            <option value="5">Jun</option>
-            <option value="6">Jul</option>
-            <option value="7">Aug</option>
-            <option value="8">Sep</option>
-            <option value="9">Oct</option>
-            <option value="10">Nov</option>
-            <option value="11">Dec</option>
-        </select>
-
-
-        <label for="year"></label><select class="form-control col-sm-4" name="year" id="year" onchange="jump()">
-        <option value="2018">2018</option>
-        <option value="2019">2019</option>
-        <option value="2020">2020</option>
-        <option value="2021">2021</option>
-        <option value="2022">2022</option>
-        <option value="2023">2023</option>
-    </select></form>
-</div>
-
-</div>
-<!--<button name="jump" onclick="jump()">Go</button>-->
-<script src="scripts.js"></script>
-<script>
-let today = new Date();
-let currentMonth = today.getMonth();
-let currentYear = today.getFullYear();
-let selectYear = document.getElementById("year");
-let selectMonth = document.getElementById("month");
-
-let months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-
-let monthAndYear = document.getElementById("monthAndYear");
-showCalendar(currentMonth, currentYear);
-
-
-function next() {
-currentYear = (currentMonth === 11) ? currentYear + 1 : currentYear;
-currentMonth = (currentMonth + 1) % 12;
-showCalendar(currentMonth, currentYear);
-}
-
-function previous() {
-currentYear = (currentMonth === 0) ? currentYear - 1 : currentYear;
-currentMonth = (currentMonth === 0) ? 11 : currentMonth - 1;
-showCalendar(currentMonth, currentYear);
-}
-
-function jump() {
-currentYear = parseInt(selectYear.value);
-currentMonth = parseInt(selectMonth.value);
-showCalendar(currentMonth, currentYear);
-}
-
-function showCalendar(month, year) {
-
-let firstDay = (new Date(year, month)).getDay();
-let daysInMonth = 32 - new Date(year, month, 32).getDate();
-
-let tbl = document.getElementById("calendar-body"); // body of the calendar
-
-// clearing all previous cells
-tbl.innerHTML = "";
-
-// filing data about month and in the page via DOM.
-monthAndYear.innerHTML = months[month] + " " + year;
-selectYear.value = year;
-selectMonth.value = month;
-
-// creating all cells
-let date = 1;
-for (let i = 0; i < 6; i++) {
-    // creates a table row
-    let row = document.createElement("tr");
-
-    //creating individual cells, filing them up with data.
-    for (let j = 0; j < 7; j++) {
-        if (i === 0 && j < firstDay) {
-            let cell = document.createElement("td");
-            let cellText = document.createTextNode("");
-            cell.appendChild(cellText);
-            row.appendChild(cell);
-        }
-        else if (date > daysInMonth) {
-            break;
-        }
-
-        else {
-            let cell = document.createElement("td");
-            let cellText = document.createTextNode(date);
-            if (date === today.getDate() && year === today.getFullYear() && month === today.getMonth()) {
-                cell.classList.add("bg-info");
-            } // color today's date
-            cell.appendChild(cellText);
-            row.appendChild(cell);
-            date++;
-        }
-
-
-    }
-
-    tbl.appendChild(row); // appending each row into calendar body.
-}
-
-}
-</script>
-
 
 <!-- Optional JavaScript for bootstrap -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
-
-</div>
