--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="bg-blue">
       <div class="container p-3">
         <div class="row">
@@ -8,68 +9,22 @@
         </div>
       </div>
 </div>
+<div class="notification">
+        <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
+        <div class="notification-content">
+          <p><small>Sep 1st</small></p>
+          <p class="text-success">Your <strong> car </strong> has been requested for a booking  was sent to the owner. You will receive a confirmation by email when your request is accepted.</p>
 
-
-<!-- code user identification -->
-
-
-<div class="container">
-
-    <% @other_people_requests.each do |booking| %>
+        <% @other_people_requests.each do |booking| %>
+        <div class="notification-actions">
           <%= link_to "Accept", accept_path(booking), class: "btn btn-primary", method: :patch %>
           <%= link_to "Reject", reject_path(booking), class: "btn btn-secondary", method: :patch %>
-    <% end %>
+        </div>
+        <% end %>
+         </div>
 </div>
-
-
-
-
-<div class="container">
-
-    <% @my_pending_requests.each do |booking| %>
-      <%= link_to "Edit", edit_booking_path(booking), class: "btn btn-primary" %>
-      <%= link_to "Delete", booking_path(booking), class: "btn btn-secondary", method: :delete %>
-    <% end %>
-</div>
-
-
-
-
-
-<div class="container">
-<div class="notification">
-  <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
-  <div class="notification-content">
-    <p><small>Sep 1st</small></p>
-    <p class="text-success">Hi Choe! Your request has just been approved.</p>
-  </div>
-  <div class="notification-actions">
-    <a href="#">Edit <i class="fas fa-pencil-alt"></i></a>
-    <a href="#">Delete <i class="far fa-trash-alt"></i></a>
-  </div>
-</div>
-</div>
-
-<div class="container">
-<div class="notification">
-  <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
-  <div class="notification-content">
-    <p><small>Sep 1st</small></p>
-    <p>Hi Choe! Your request is being reviewed by the owner.</p>
-  </div>
-  <div class="notification-actions">
-    <a href="#">Message Owner <i class="fas fa-pencil-alt"></i></a>
-    <a href="#">Delete <i class="far fa-trash-alt"></i></a>
-  </div>
-</div>
-</div>
-
-
-
-
-
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+</div>
