--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,27 +1,24 @@
-<div class="bg-white">
-        <div class="container p-3">
-          <div class="row">
-            <div class="col-md-8">
-              <h3>Fun to drive, comfortable ride and fuel efficient, great for short and long trips.</h3>
-              <ul>
-                <p>🎁 Book now 10% OFF code (end of trip)</p>
-                <p>🚆FREE Metro station Drop off at end of trip</p>
-            </ul>
-            </div>
-            <div class="col-md-4">
-              <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
-
-            </ul>
-            </div>
-            <div class="col-md-4">
-              <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
-            </div>
-          </div>
-        </div>
-</div>
-    <div class="container py-3">
+<div class="container">
+  <div class="bg-white">
+    <div class="container p-3">
       <div class="row">
         <div class="col-md-8">
+              <h3>Fun to drive, comfortable ride and fuel efficient, great for short and long trips.</h3>
+              <ul>
+                <p class="py-3">🎁 Book now 10% OFF code (end of trip)</p>
+                <p>🚆FREE Metro station Drop off at end of trip</p>
+            </ul>
+        </div>
+          <div class="col-md-4">
+              <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
+          </div>
+    </div>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-8 py-3">
           <h2>Services included</h2>
           <!-- make a card -->
           <div class="card p-3 mb-3">
@@ -32,30 +29,27 @@
               <p class="card-text">💰 Rent 1 week receive 20$ FREE gas </p>
             </div>
           </div>
- <!-- checkout box -->
-        <div class="">
-            <div class="bg-white border p-3 sticky-top">
-                <a href="#" class="btn btn-primary w-100">Book now</a>
-                <div class="d-flex justify-content-between mt-3">
-                  <p>Model</p>
-                  <p><%= @car.model %></p>
-                </div>
-                <div class="d-flex justify-content-between mt-3">
-                  <p>Owner</p>
-                  <p><%= @car.user.first_name %></p>
-                </div>
-                <div class="d-flex justify-content-between mt-3">
-                  <p>Capacity</p>
-                  <p><%= @car.capacity %></p>
-                </div>
-                <%= render "bookings/new" %>
-
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
+ <!-- checkout box -->
+
+          <div class="col-md-4 py-3">
+              <div class="bg-white border p-3 sticky-top">
+                  <div class="d-flex justify-content-between mt-3">
+                    <p>Model</p>
+                    <p><%= @car.model %></p>
+                  </div>
+                  <div class="d-flex justify-content-between mt-3">
+                    <p>Owner</p>
+                    <p><%= @car.user.first_name %></p>
+                  </div>
+                  <div class="d-flex justify-content-between mt-3">
+                    <p>Capacity</p>
+                    <p><%= @car.capacity %></p>
+                  </div>
+                  <%= render "bookings/new" %>
+              </div>
+          </div>
+          </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
