--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -24,7 +24,7 @@
               <h4 class="card-title"><strong><%= car.model %></strong></h4>
                 <p><%= car.capacity %> persons</p>
                 <p><%= car.price %>$ /per day</p>
-              <%= link_to "Book now", car_path(car), class: "btn btn-primary" %>
+              <%= link_to "Book now", car_path(car), class: "btn btn-info" %>
             </div>
           </div>
         </div>
